syntax = "proto3";
package health.v1;

import "google/api/annotations.proto";

option go_package = "go.tekoapis.com/uetvoting/pb/health/v1;health";


// HeathCheckService provide health check RPC and endpoint to check service status
service HealthCheckService {

  //Liveness handle application port open check
  rpc Liveness(LivenessRequest) returns (LivenessResponse) {
    option (google.api.http) = {
      get: "/health/live"
    };
  }
  // Readiness handle ready service check health
  rpc Readiness(ReadinessRequest) returns (ReadinessResponse) {
    option (google.api.http) = {
      get: "/health/ready"
    };
  }
}

// LivenessRequest ...
message LivenessRequest {}

// ReadinessResponse ...
message ReadinessRequest {}

/// LivenessRequest ...
message LivenessResponse {
  string content = 1 [json_name = "content"];
}

// ReadinessResponse
message ReadinessResponse {
  string content = 1 [json_name = "content"];
}
